Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- API to support CPSPortlets.
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Adding Plone skins names in CMFInstaller to be able to register
  CPSIO skins (needed when installing CPSIO on a Plone site to export it).
- Unit tests for CPSPortlets. If CPSPortlets is not present, since it's not a mandatory product, the unit tests are not going to be called